// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover demo -- animation 1`] = `
<div>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin-left:5px"
  >
    fade
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin-left:5px"
  >
    zoom
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin-left:5px"
  >
    bounce
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin-left:5px"
  >
    slide-up
  </button>
</div>
`;

exports[`Popover demo -- base 1`] = `
<div>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin-left:5px"
  >
    hover
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin-left:5px"
  >
    focus
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin-left:5px"
  >
    click
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin-left:5px"
  >
    contextMenu
  </button>
</div>
`;

exports[`Popover demo -- control 1`] = `
<div>
  <div />
  <div
    style="width:80px;height:50px;background:#ddd;display:inline-block;margin-left:5px"
  >
    hover me
  </div>
  <button>
    toggle
  </button>
</div>
`;

exports[`Popover demo -- forwardPopupContainer 1`] = `
.emotion-18 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px rgba(0,0,0,0.08);
  border-radius: 4px;
}

.emotion-18 .uc-fe-card-header:last-of-type,
.emotion-18 .uc-fe-card-action:last-of-type,
.emotion-18 .uc-fe-card-content:last-of-type {
  margin-bottom: 24px;
}

.emotion-18 .uc-fe-card-header:nth-of-type(2),
.emotion-18 .uc-fe-card-action:nth-of-type(2),
.emotion-18 .uc-fe-card-content:nth-of-type(2) {
  margin-top: 24px;
}

.emotion-18 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-18 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-18 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-4 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-4:before,
.emotion-4:after {
  content: ' ';
  display: table;
}

.emotion-4:after {
  clear: both;
}

.emotion-0 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-2 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-10 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-10:before,
.emotion-10:after {
  content: ' ';
  display: table;
}

.emotion-10:after {
  clear: both;
}

.emotion-6 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-6:link,
.emotion-6:visited {
  color: #0a1633;
}

.emotion-6:hover,
.emotion-6:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-12 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-16 {
  line-height: 1;
  padding: 0 24px;
  margin-top: 16px;
  padding-top: 12px;
}

.emotion-16:before,
.emotion-16:after {
  content: ' ';
  display: table;
}

.emotion-16:after {
  clear: both;
}

.emotion-18 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px rgba(0,0,0,0.08);
  border-radius: 4px;
}

.emotion-18 .uc-fe-card-header:last-of-type,
.emotion-18 .uc-fe-card-action:last-of-type,
.emotion-18 .uc-fe-card-content:last-of-type {
  margin-bottom: 24px;
}

.emotion-18 .uc-fe-card-header:nth-of-type(2),
.emotion-18 .uc-fe-card-action:nth-of-type(2),
.emotion-18 .uc-fe-card-content:nth-of-type(2) {
  margin-top: 24px;
}

.emotion-18 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-18 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-18 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-4 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-4:before,
.emotion-4:after {
  content: ' ';
  display: table;
}

.emotion-4:after {
  clear: both;
}

.emotion-0 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-2 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-10 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-10:before,
.emotion-10:after {
  content: ' ';
  display: table;
}

.emotion-10:after {
  clear: both;
}

.emotion-6 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-6:link,
.emotion-6:visited {
  color: #0a1633;
}

.emotion-6:hover,
.emotion-6:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-12 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-16 {
  line-height: 1;
  padding: 0 24px;
  margin-top: 16px;
  padding-top: 12px;
}

.emotion-16:before,
.emotion-16:after {
  content: ' ';
  display: table;
}

.emotion-16:after {
  clear: both;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-card emotion-18 emotion-19"
    >
      <div />
      <div
        class="uc-fe-card-header emotion-4 emotion-5"
      >
        <div
          class="uc-fe-card-title emotion-0 emotion-1"
        >
          默认容器为 body，可以显示，但滚动时由于容器和元素不在一个滚动层中，会导致偏移，体验较差
        </div>
        <div
          class="uc-fe-card-comment emotion-2 emotion-3"
        >
          This is the comment
        </div>
      </div>
      <div
        class="uc-fe-card-action emotion-10 emotion-11"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-6 emotion-7"
          type="button"
        >
          This is a action button
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-6 emotion-7"
          type="button"
        >
          This is a action button
        </button>
      </div>
      <div
        class="uc-fe-card-content emotion-12 emotion-13"
      >
        <div
          style="background:#e1e6f0;height:50px;padding:10px"
        >
          This is the content
        </div>
      </div>
      <div
        class="uc-fe-card-footer emotion-16 emotion-17"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-6 emotion-7"
          style="float:right"
          type="button"
        >
          This is a footer button
        </button>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-card emotion-18 emotion-19"
    >
      <div />
      <div
        class="uc-fe-card-header emotion-4 emotion-5"
      >
        <div
          class="uc-fe-card-title emotion-0 emotion-1"
        >
          使用父容器作为容器，如果上层有定位容器，并再上层嵌套了滚动容器，会导致弹出层无法脱离，定位出现问题且滚动会闪烁
        </div>
        <div
          class="uc-fe-card-comment emotion-2 emotion-3"
        >
          This is the comment
        </div>
      </div>
      <div
        class="uc-fe-card-action emotion-10 emotion-11"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-6 emotion-7"
          type="button"
        >
          This is a action button
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-6 emotion-7"
          type="button"
        >
          This is a action button
        </button>
      </div>
      <div
        class="uc-fe-card-content emotion-12 emotion-13"
      >
        <div
          style="position:relative"
        >
          <div
            style="background:#e1e6f0;height:50px;padding:10px"
          >
            This is the content
          </div>
        </div>
      </div>
      <div
        class="uc-fe-card-footer emotion-16 emotion-17"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-6 emotion-7"
          style="float:right"
          type="button"
        >
          This is a footer button
        </button>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-card emotion-18 emotion-19"
    >
      <div />
      <div
        class="uc-fe-card-header emotion-4 emotion-5"
      >
        <div
          class="uc-fe-card-title emotion-0 emotion-1"
        >
          使用 forwardPopupContainer 可以比较方便的跳过组件内部的这类问题，Card、Table 等组件内部都提供了比较安全的容器区域。
        </div>
        <div
          class="uc-fe-card-comment emotion-2 emotion-3"
        >
          This is the comment
        </div>
      </div>
      <div
        class="uc-fe-card-action emotion-10 emotion-11"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-6 emotion-7"
          type="button"
        >
          This is a action button
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-6 emotion-7"
          type="button"
        >
          This is a action button
        </button>
      </div>
      <div
        class="uc-fe-card-content emotion-12 emotion-13"
      >
        <div
          style="position:relative"
        >
          <div
            style="background:#e1e6f0;height:50px;padding:10px"
          >
            This is the content
          </div>
        </div>
      </div>
      <div
        class="uc-fe-card-footer emotion-16 emotion-17"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-6 emotion-7"
          style="float:right"
          type="button"
        >
          This is a footer button
        </button>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <h2>
        使用 function 的 forwardPopupContainer 来做容器的 fallback
      </h2>
      <div
        style="position:relative"
      >
        <div
          style="background:#e1e6f0;height:50px;padding:10px"
        >
          This is the content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover demo -- placement 1`] = `
<div>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px"
  >
    topLeft
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px"
  >
    top
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px"
  >
    topRight
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px"
  >
    bottomLeft
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px"
  >
    bottom
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px"
  >
    bottomRight
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px"
  >
    leftTop
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px"
  >
    left
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px"
  >
    leftBottom
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px"
  >
    rightTop
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px"
  >
    right
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px"
  >
    rightBottom
  </button>
</div>
`;

exports[`Popover demo -- point 1`] = `
<div>
  <div />
  <div
    style="width:80px;height:50px;background:#ddd;display:inline-block;margin-left:5px"
  >
    hover me
  </div>
</div>
`;

exports[`Popover demo -- popover 1`] = `
.emotion-60 {
  font-size: 12px;
}

.emotion-60 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-60 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-34 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-34:before,
.emotion-34:after {
  content: ' ';
  display: table;
}

.emotion-34:after {
  clear: both;
}

.emotion-34 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-30 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-27 .uc-fe-checkbox {
  margin-right: 8px;
}

.emotion-27 .uc-fe-checkbox:last-child {
  margin-right: 0;
}

.emotion-7 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  min-height: 28px;
  line-height: 28px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.emotion-7 > * {
  font-size: 12px;
}

.emotion-7 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-7.uc-fe-checkbox-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-7:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.emotion-5.uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  vertical-align: middle;
}

.emotion-5 .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-5.uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.emotion-5 .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.emotion-3 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 14px;
  height: 14px;
}

.emotion-11.uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  vertical-align: middle;
}

.emotion-11 .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-39 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  width: 73px;
}

.emotion-39 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-39 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-39 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-39 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-39 .uc-fe-switch-tip-on,
.emotion-39 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-39 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-39 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-39 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-39 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-39:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-39 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-39 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-39 .uc-fe-switch-tip-on {
  display: none;
}

.emotion-51 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  width: 73px;
}

.emotion-51 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-51 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-51 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-51 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-51 .uc-fe-switch-tip-on,
.emotion-51 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-51 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-51 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-51 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-51 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-51:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
  border-color: #E6FFED;
}

.emotion-51 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-51 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-51 .uc-fe-switch-inner {
  color: #ffffff;
  border-color: #E6FFED;
  background: #15AD31;
}

.emotion-51 .uc-fe-switch-button {
  left: 100%;
  margin-left: -28px;
}

.emotion-51 .uc-fe-switch-dot {
  background: #15AD31;
}

.emotion-51 .uc-fe-switch-tip-off {
  display: none;
}

.emotion-62 {
  position: relative;
  box-sizing: border-box;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-62:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-62 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: rgba(10,22,51,0.2);
  fill: rgba(10,22,51,0.2);
  opacity: 0;
  -webkit-transition: opacity 0.3s,color 0.1s,fill 0.1s;
  transition: opacity 0.3s,color 0.1s,fill 0.1s;
}

.emotion-62 .uc-fe-input-clear:hover {
  color: #7a8baa;
  fill: #7a8baa;
}

.emotion-62,
.emotion-62 .uc-fe-input-prefix,
.emotion-62 .uc-fe-input-suffix,
.emotion-62 .uc-fe-input-clear,
.emotion-62 input,
.emotion-62 .e1du0tm81 {
  padding: 0 4px;
}

.emotion-62.uc-fe-input-block {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-62 .uc-fe-input-prefix,
.emotion-62 .uc-fe-input-suffix,
.emotion-62 .e1du0tm81 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-62 .e1du0tm81[hidden] {
  display: none;
}

.emotion-62 .uc-fe-input-block-wrap {
  height: 18px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0px;
}

.emotion-62 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-62 input,
.emotion-62 input:hover,
.emotion-62 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-62 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-62 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-62 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-62 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-62 input::-ms-clear {
  display: none;
}

.emotion-60 {
  font-size: 12px;
}

.emotion-60 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-60 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-34 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-34:before,
.emotion-34:after {
  content: ' ';
  display: table;
}

.emotion-34:after {
  clear: both;
}

.emotion-34 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-30 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-27 .uc-fe-checkbox {
  margin-right: 8px;
}

.emotion-27 .uc-fe-checkbox:last-child {
  margin-right: 0;
}

.emotion-7 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  min-height: 28px;
  line-height: 28px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.emotion-7 > * {
  font-size: 12px;
}

.emotion-7 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-7.uc-fe-checkbox-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-7:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.emotion-5.uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  vertical-align: middle;
}

.emotion-5 .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-5.uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.emotion-5 .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.emotion-3 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 14px;
  height: 14px;
}

.emotion-11.uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  vertical-align: middle;
}

.emotion-11 .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-39 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  width: 73px;
}

.emotion-39 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-39 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-39 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-39 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-39 .uc-fe-switch-tip-on,
.emotion-39 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-39 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-39 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-39 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-39 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-39:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-39 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-39 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-39 .uc-fe-switch-tip-on {
  display: none;
}

.emotion-51 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  width: 73px;
}

.emotion-51 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-51 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-51 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-51 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-51 .uc-fe-switch-tip-on,
.emotion-51 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-51 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-51 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-51 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-51 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-51:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
  border-color: #E6FFED;
}

.emotion-51 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-51 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-51 .uc-fe-switch-inner {
  color: #ffffff;
  border-color: #E6FFED;
  background: #15AD31;
}

.emotion-51 .uc-fe-switch-button {
  left: 100%;
  margin-left: -28px;
}

.emotion-51 .uc-fe-switch-dot {
  background: #15AD31;
}

.emotion-51 .uc-fe-switch-tip-off {
  display: none;
}

.emotion-62 {
  position: relative;
  box-sizing: border-box;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-62:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-62 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: rgba(10,22,51,0.2);
  fill: rgba(10,22,51,0.2);
  opacity: 0;
  -webkit-transition: opacity 0.3s,color 0.1s,fill 0.1s;
  transition: opacity 0.3s,color 0.1s,fill 0.1s;
}

.emotion-62 .uc-fe-input-clear:hover {
  color: #7a8baa;
  fill: #7a8baa;
}

.emotion-62,
.emotion-62 .uc-fe-input-prefix,
.emotion-62 .uc-fe-input-suffix,
.emotion-62 .uc-fe-input-clear,
.emotion-62 input,
.emotion-62 .e1du0tm81 {
  padding: 0 4px;
}

.emotion-62.uc-fe-input-block {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-62 .uc-fe-input-prefix,
.emotion-62 .uc-fe-input-suffix,
.emotion-62 .e1du0tm81 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-62 .e1du0tm81[hidden] {
  display: none;
}

.emotion-62 .uc-fe-input-block-wrap {
  height: 18px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0px;
}

.emotion-62 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-62 input,
.emotion-62 input:hover,
.emotion-62 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-62 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-62 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-62 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-62 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.2);
}

.emotion-62 input::-ms-clear {
  display: none;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-60 emotion-330"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-32 emotion-33 emotion-34 emotion-35"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        trigger
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-29 emotion-30 emotion-2"
        span="9"
      >
        <div
          class="uc-fe-checkbox-group emotion-27 emotion-28"
        >
          <span
            checked=""
            class="uc-fe-checkbox uc-fe-checkbox-checked emotion-7 emotion-8"
          >
            <span
              checked=""
              class="uc-fe-checkbox-icon-wrap emotion-5 emotion-6"
            >
              <svg
                class="uc-fe-checkbox-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              hover
            </span>
          </span>
          <span
            class="uc-fe-checkbox emotion-7 emotion-8"
          >
            <span
              class="uc-fe-checkbox-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-checkbox-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              focus
            </span>
          </span>
          <span
            class="uc-fe-checkbox emotion-7 emotion-8"
          >
            <span
              class="uc-fe-checkbox-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-checkbox-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              click
            </span>
          </span>
          <span
            class="uc-fe-checkbox emotion-7 emotion-8"
          >
            <span
              class="uc-fe-checkbox-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-checkbox-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              contextMenu
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-32 emotion-33 emotion-34 emotion-35"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        visible
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-29 emotion-30 emotion-2"
        span="9"
      >
        <div
          class="emotion-39 emotion-40"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-32 emotion-33 emotion-34 emotion-35"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        forceAlignWhenScroll
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-29 emotion-30 emotion-2"
        span="9"
      >
        <div
          checked=""
          class="emotion-51 emotion-40"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-62 emotion-63"
    >
      <span
        class="uc-fe-input-block-wrap"
      >
        <input
          placeholder="trigger input"
          value=""
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Popover demo -- stretch 1`] = `
<div>
  <div
    class="demo-wrap"
  >
    <button
      style="width:200px;height:100px;background:#ddd;display:inline-block;margin:5px"
    >
      default
    </button>
  </div>
  <div
    class="demo-wrap"
  >
    <button
      style="width:200px;height:100px;background:#ddd;display:inline-block;margin:5px"
    >
      width
    </button>
  </div>
  <div
    class="demo-wrap"
  >
    <button
      style="width:200px;height:100px;background:#ddd;display:inline-block;margin:5px"
    >
      minHeight
    </button>
  </div>
  <div
    class="demo-wrap"
  >
    <button
      style="width:200px;height:100px;background:#ddd;display:inline-block;margin:5px"
    >
      height, width
    </button>
  </div>
</div>
`;
